--- a/api.yaml
+++ b/api.yaml
@@ -25,6 +25,8 @@ paths:
         - Uploads
       summary: Create Insert Upload
       description: >
+        <a href="https://github.com/clear-street/docs/examples/uploads/create_insert_upload.py"> Example </a>
+        <br />
         Upload the provided CSV file for processing asynchronously. Use this endpoint if you have very large number of trades (> 10000). Your file will be uploaded to our servers, and then subsequently processed.
         <p>The columns for a CSV file should match the JSON path dot-notation of the fields available in the <b><a href="#operation/trades_insert">insert trades endpoint</a></b>. For example, the column `side.direction` would be the column header to set the direction of a trade, and the column `instrument.ticker` would set the trade's instrument ticker, etc.</p>
         <p>Our <b>[trade-file specification](https://github.com/clear-street/docs/blob/master/trade_file.md)</b> has more details.</p>
@@ -77,6 +79,8 @@ paths:
         - Uploads
       summary: Create Cancel Upload
       description: >
+        <a href="https://github.com/clear-street/docs/examples/uploads/create_cancel_upload.py"> Example </a>
+        <br />
         Upload the provided CSV file for processing cancels asynchronously.
         <tr><th>account</th><td>100001</td></tr>
         <tr><th>trade_id</th><td>12343</td></tr>
@@ -113,7 +117,10 @@ paths:
       tags:
         - Uploads
       summary: Get Upload By ID
-      description: Get an existing upload. Use this endpoint when you want to the know the status of a previously created upload.
+      description: >
+        <a href="https://github.com/clear-street/docs/examples/uploads/get_upload_by_id.py"> Example </a>
+        <br />
+        Get an existing upload. Use this endpoint when you want to the know the status of a previously created upload.
       operationId: uploads_get_by_id
       parameters:
         - in: path
@@ -139,6 +146,8 @@ paths:
         - Trades
       summary: Insert Trades
       description: >
+        <a href="https://github.com/clear-street/docs/examples/trades/insert"> Example </a>
+        <br />
         Insert the provided trades atomically. Use this endpoint if you want atomicity and immediate confirmation; this request will either fully process all your trades, or reject them all atomically. Therefore, a successful call to this endpoint guarantees that your trades have been accepted by our systems. This endpoint can accept up to 1000 trades.
         <ul>
         <li><b>Exchange Trade</b> trades represent trades done directly on an exchange. An example would be a trading account buying shares on Nasdaq.</li>
@@ -180,7 +189,10 @@ paths:
       tags:
         - Trades
       summary: Cancel Trade By ID
-      description: Cancel a trade that were previously created. Note, you can only cancel a trade that have been accepted. If you uploaded asynchronously with a file, you must wait for the trade to be processed and accepted.
+      description: >
+        <a href="https://github.com/clear-street/docs/examples/trades/cancel_trade_by_id.py"> Example </a>
+        <br />
+        Cancel a trade that were previously created. Note, you can only cancel a trade that have been accepted. If you uploaded asynchronously with a file, you must wait for the trade to be processed and accepted.
       operationId: trades_cancel
       parameters:
         - in: path
